--- a/actions/hdl_fosix/sw/Makefile
+++ b/actions/hdl_fosix/sw/Makefile
@@ -38,8 +38,7 @@ $(error Please make sure that $$SNAP_ROOT is set up correctly.)
 endif
 endif
 
-projs += snap_example snap_example_ddr snap_example_nvme snap_example_set
-projs += snap_example_qnvme
+projs += snap_fosix
 
 # If you have the host code outside of the default snap directory structure, 
 # change to /path/to/snap/actions/software.mk
